# SmartPlatform

./: .gitignore  CMakeLists.txt  README.md
3rdparty-linux/FreeImage/Source/LibWebP/src/dsp/: dsp.upsampling_mips_dsp_r2.c  dsp.yuv_mips_dsp_r2.c
3rdparty-linux/boost/lib/: libboost_chrono.so.1.64.0  libboost_container.so.1.64.0  libboost_date_time.so.1.64.0  libboost_graph.so.1.64.0  libboost_iostreams.so.1.64.0  libboost_locale.so.1.64.0  libboost_math_c99f.so.1.64.0  libboost_math_c99l.so.1.64.0  libboost_prg_exec_monitor.so.1.64.0  libboost_regex.so.1.64.0  libboost_serialization.so.1.64.0  libboost_signals.so.1.64.0  libboost_system.so.1.64.0  libboost_timer.so.1.64.0  libboost_type_erasure.so.1.64.0  libboost_wserialization.so.1.64.0
3rdparty-linux/cpp_redis/lib/pkgconfig/: cpp_redis.pc
3rdparty-linux/image_stone/doc/: Doxyfile
3rdparty-linux/image_stone/example/001/: 001.sln
3rdparty-linux/image_stone/example/002/: 002_vs2005.sln
3rdparty-linux/image_stone/include/: image.h
3rdparty-linux/opencv/include/opencv2/: cvconfig.h
3rdparty-linux/opencv/lib/: libopencv_calib3d.so.3.1.0  libopencv_features2d.so.3.1  libopencv_flann.so.3.1  libopencv_highgui.so.3.1  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_video.so.3.1  libopencv_videostab.so.3.1
3rdparty-linux/opencv/lib/pkgconfig/: opencv.pc
Doc/: 算法服务.vsd  算法服务平台.mpp
SmartPlatform/Windows/: SmartPlatform.sln  SmartPlatform.vcxproj  SmartPlatform.vcxproj.filters
SmartPlatform/src/: CigaretteAlgorithmThread.cpp  CigaretteAlgorithmThread.h  CigaretteAlgorithmThreadManager.cpp  CigaretteAlgorithmThreadManager.h  Common.h  Config.cpp  Config.h  Detector.cpp  Detector.h  DetectorWrapper.cpp  DetectorWrapper.h  GoogleLog.cpp  GoogleLog.h  ILog.cpp  ILog.h  IMessageHandler.cpp  IMessageHandler.h  ImageSaveThread.cpp  ImageSaveThread.h  MLog.cpp  MLog.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageWithSession.cpp  MessageWithSession.h  RawData.h  RawDataWithSession.h  Recognizer.cpp  Recognizer.h  Server.cpp  Server.h  Session.cpp  Session.h  ThreadBase.cpp  ThreadBase.h  UdpLog.cpp  UdpLog.h  Util.cpp  Util.h  main.cpp  (+1 more)
SmartPlatform/tests/SmartPlatformUnitTest/: SmartPlatformUnitTest.sln  SmartPlatformUnitTest.vcxproj  SmartPlatformUnitTest.vcxproj.filters  main.cpp
SmartProxy/: CMakeLists.txt
SmartProxy/src/: CameraOcclusionServiceRequestHandler.cpp  CameraOcclusionServiceRequestHandler.h  HusbandWifeLooksHandler.cpp  HusbandWifeLooksHandler.h  MQuque.h  RegisterUnRegisterServiceHandler.cpp  RegisterUnRegisterServiceHandler.h  RequestHandler.cpp  RequestHandler.h  ServiceItem.h  ServiceUpdater.cpp  ServiceUpdater.h  Util.cpp  Util.h  main.cpp  main22.cpp
SmartProxy/test/: test_interface.html
SmartProxy/windows/: SmartProxy.sln  SmartProxy.vcxproj  SmartProxy.vcxproj.filters
SmartService/: CMakeLists.txt
SmartService/src/: Algorithm.h  AlgorithmThread.cpp  AlgorithmThread.h  CameraObscureAlgorithm.cpp  CameraObscureAlgorithm.h  CameraObscured.cpp  CameraObscured.h  Config.cpp  Config.h  DataItem.h  HttpClient.cpp  HttpClient.h  IAlgorithm.h  MyThread.h  MyThread2.h  QueueManager.h  Server.cpp  Server.h  ServiceItem.cpp  ServiceItem.h  ServiceRegisterUnregister.cpp  ServiceRegisterUnregister.h  Session.cpp  Session.h  Util.cpp  Util.h  main.cpp
SmartService/windows/: SmartService.sln  SmartService.vcxproj  SmartService.vcxproj.filters
Test/: main.py
