project(SmartPlatform)
cmake_minimum_required(VERSION 3.5)
set(PROJECT_ROOT "${PROJECT_SOURCE_DIR}" CACHE INTERNAL "project root dir")
set(BOOST_INCLUDEDIR "/home/michael/work/3rdparty/boost_1_64_0")
set(BOOST_LIBRARYDIR "/home/michael/work/3rdparty/boost_1_64_0/stage/lib")
set(OPENCV_INCLUDE_DIR "/usr/local/include")
set(OPENCV_LIBRARY_DIR "/usr/local/lib/")
add_compile_options(-std=c++14)
add_subdirectory(SmartProxy)
add_subdirectory(SmartService)
