project(SmartPlatform) 
cmake_minimum_required(VERSION 3.8)
set(PROJECT_ROOT "${PROJECT_SOURCE_DIR}" CACHE INTERNAL "project root dir")
set(BOOST_INCLUDEDIR "${PROJECT_ROOT}/3rdparty-linux/boost/include")
set(BOOST_LIBRARYDIR "${PROJECT_ROOT}/3rdparty-linux/boost/lib")
set(OPENCV_INCLUDE_DIR "${PROJECT_ROOT}/3rdparty-linux/opencv/include")
set(OPENCV_LIBRARY_DIR "${PROJECT_ROOT}/3rdparty-linux/opencv/lib")
add_compile_options(-std=c++14)
add_definitions(-Dlinux)
add_subdirectory(SmartProxy)
add_subdirectory(SmartService)
